--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,17 +7,17 @@
   <% @user.viewing_parties.each do |party| %>
     <center id="<%= party.id %>" class="movie_section">
       <p><%= image_tag("https://image.tmdb.org/t/p/w500#{party.find_movie.backdrop_path}") %></p>
-      <p><%= link_to party.find_movie.title, "/users/#{@user.id}/movies/#{party.find_movie.id}" %></p>
-      <p>Day: <%= party.day %></p>
-      <p>Time: <%= party.view_time %></p>
-      <p>Host: <%= party.find_host(@user)%></p>
-      <p>Guests:</p>
+      <p><b><%= link_to party.find_movie.title, "/users/#{@user.id}/movies/#{party.find_movie.id}" %></b></p>
+      <p><b>Day:</b> <%= party.day %></p>
+      <p><b>Time:</b> <%= party.view_time %></p>
+      <p><b>Host:</b> <%= party.find_host(@user)%></p>
+      <p><b>Guests:</b></p>
       <section id="guests">
       <% party.users.each do |user| %>
         <% if user.name == @user.name %>
-          <p><b><%= user.name %></b></p>
+          <p>-<b><%= user.name %></b>-</p>
         <% else %>
-          <p><%= user.name %></p>
+          <p>-<%= user.name %>-</p>
         <% end %>
       <% end %>
       </section>
