feat: add invitees lists to each viewing party displayed
Co-authored-by: Kaylee Janes <132856753+kbug819@users.noreply.github.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,23 +6,38 @@
 <section class="party_invitations">
   <h3>Viewing Party Invitations</h3>
   <% @invited_viewing_parties.each do |party| %>
-    <img src=<%= party.poster %>>
     <%= link_to "", "/users/#{@user.id}/movies/#{party.movie_id}" %>
     <p>When: <%= party.date %></p>
     <p>Start Time: <%= party.start_time %></p>
-    <p>Host: <%= user_host_name(party.user_host_id) %></p>
-    <p>Invitees: </p>
+    <p>Host: <%= User.user_host_name(party.host_user_id) %></p>
+    <p>Invitees:
+      <ul>
+      <% party.invitees.each do |invitee| %>
+        <li><% if invitee.id == @user.id %>
+              <strong><%= invitee.name %></strong>
+            <% else %>
+              <%= invitee.name %>
+            <% end %>
+        </li>
+      <% end %>
+      </ul>
+    </p>
   <% end %>
 </section>
 
 <section class="hosted_parties">
   <h3>Viewing Parties I'm Hosting</h3>
   <% @hosted_viewing_parties.each do |party| %>
-    <img src=<%= party.poster %>>
     <%= link_to "", "/users/#{@user.id}/movies/#{party.movie_id}" %>
     <p>When: <%= party.date %></p>
     <p>Start Time: <%= party.start_time %></p>
     <p>Host: I am hosting</p>
-    <p>Invitees: </p>
+    <p>Invitees: 
+      <ul>
+        <% party.invitees.each do |invitee| %>
+          <li><%= invitee.name %></li>
+        <% end %>
+      </ul>
+    </p>
   <% end %>
 </section>
