--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -10,11 +10,11 @@
   <tbody>
     <% @movies.each do |movie| %>
       <tr>
-        <td><%= link_to movie.title, movie_details_path(movie) %></td>
+        <td><%= link_to movie.title, user_movie_path(id: movie.id) %></td>
         <td><%= movie.vote_average %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to 'Return to Discover Page', discover_movies_path(user_id: @user.id) %>
+<%= link_to 'Return to Discover Page', user_discover_index_path(user_id: @user.id) %>
